[F&B]チェックボックスが機能するようになった
